Change speed of videos if needed

--- a/website/getslideshow.html
+++ b/website/getslideshow.html
@@ -88,6 +88,12 @@
                     <div class="callout">
                         <center>
                             <div class="success button" id="createvideo"><b>Generate Video</b></div>
+                            <select id="videoSpeed">
+                                <option value="0">--Change Video Speed (Only if you want to) --</option>
+                                <option value="1">Leave it the way it is</option>
+                                <option value="2">Super fast (I just want a flashback!)</option>
+                                <option value="3">Slow (Let me read the captions!)</option>
+                            </select>
                             <br>
                             <div id="videoPlace">
 
