Fixed bug on >= of the popularity, changed descriptions'

--- a/website/getgroupme.html
+++ b/website/getgroupme.html
@@ -81,13 +81,10 @@
     <div class="row">
         <div class="large-12 columns">
             <div class="callout">
-                <p><b> What's this all about!? </b><p>
-                <p>There were times when I loved some of the groupme messages that I received, and so did a lot of my friends!
-                These loved messages were those with the most "hearts" and there were parties and times when I wanted to just play all the pictures that
-                were most upvoted, but there was no way to filter out the noise on the unimportant messages.
-                That's when I decided to make groupmePensieve here, just so I could extract groupme messages based on their popularity ,
-                by mentioning the minimum and maximum hearts they received, and by pointing out the start date from when the messages need to be collected. I wondered if it would be of
-                any use to the rest of you groupme users, so here it is, on a website!
+                <p><b> Minimum number of hearts </b> : Indicates the popularity filter on the groupme messages that you want on your generated video<p>
+                <p><b> Start date </b> : Indicates the date that you want to start collecting your groupme messages from </p>
+                <p><b> What does this do really? </b> : The website is only going to make secure REST calls to groupme API , and you can check out the source code <a href="https://github.com/inchara/groupmeflashback">here</a></p>
+                <p><b> How you'd want to go about it </b>: The longer the time window you select, the more time it would take to grab all your groupme data for that group. Also, the higher the popularity of the messages that you select, the lesser the photos appear in your list. For instance, in a group of say 100 people, I select around 40 to be the value to "maximum number of likes' and I could generate a video for all the filtered pictures for over a year. </p>
             </div>
             <div class="callout">
                 <p>Contact me on <a href="https://www.facebook.com/inchara.s">Facebook</a>/<a href="https://www.linkedin.com/in/incharashivalingaiah">LinkedIn</a>/<a href="https://twitter.com/incharas">Twitter</a> if you have any questions/comments - Inchara Shivalingaiah</p>
