Fixed bugs around not processing some images
Apparently, when you try to add an image on the canvas with any number that is not a whole number, the image doesn't really get added. So needed to floor all the numbers before taking them into the image.

--- a/website/getslideshow.html
+++ b/website/getslideshow.html
@@ -89,6 +89,9 @@
                         <center>
                             <div class="success button" id="createvideo"><b>Generate Video</b></div>
                             <br>
+                            <!--div class="progress" role="progressbar">
+                                <div class="progress-meter" id="myBar"></div>
+                            </div-->
                             <div id="videoPlace">
 
                             </div>
