Fix bug that blocked xhr.send when error was caused. Fix bug for a special case (not sure why it happened) that caused 403 errored images to cause errors - Can't head this before you add it to allImages since we need special permissions for groupme. Added a hack for now.

--- a/website/getgroupme.html
+++ b/website/getgroupme.html
@@ -86,7 +86,7 @@
                 <p><b> How you'd want to go about it </b>: The longer the time window you select, the more time it would take to grab all your groupme data for that group. Also, the higher the popularity of the messages that you select, the lesser the photos appear in your list. For instance, in a group of say 100 people, I select around 40 to be the value to "maximum number of likes' and I could generate a video for all the filtered pictures for over a year. </p>
             </div>
             <div class="callout">
-                <p>Contact me on <a href="https://www.facebook.com/inchara.s">Facebook</a>/<a href="https://www.linkedin.com/in/incharashivalingaiah">LinkedIn</a>/<a href="https://twitter.com/incharas">Twitter</a> if you have any questions/comments - Inchara Shivalingaiah</p>
+                <p>Contact : <a href="https://www.linkedin.com/in/incharashivalingaiah">LinkedIn</a>/<a href="https://twitter.com/incharas">Twitter</a></p>
             </div>
 
         </div>
